bg image fix for retailers andpublishers on mobile

--- a/rb/static/site/css/site_sass_compiled.css
+++ b/rb/static/site/css/site_sass_compiled.css
@@ -7532,8 +7532,8 @@ section.big-beta-form .learn-more-boxes {
 
 .publishers section.masthead {
   background-image: url("../images/open_mic.jpg");
-  background-size: 75%;
-  background-position: 0% 50%; }
+  background-size: auto 100%;
+  background-position: 50%; }
   .publishers section.masthead h1 {
     font-size: 5rem; }
     .publishers section.masthead h1 .line-one {
@@ -7561,8 +7561,8 @@ section.big-beta-form .learn-more-boxes {
 
 .retailers section.masthead {
   background-image: url("../images/store-owner.jpg");
-  background-size: 73%;
-  background-position: 0% 23%; }
+  background-size: auto 100%;
+  background-position: 50%; }
   .retailers section.masthead h1 {
     font-size: 5rem; }
     .retailers section.masthead h1 .line-one {
